--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
 			"email": "joshhagel@linchpinstudios.com"
 		}
 	],
+      "require": {
+        "aws/aws-sdk-php": "2.*"
+      },
 	"autoload": {
 		"psr-4": {
 			"linchpinstudios\\filemanager\\": ""
