--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "linkstate": "^1.1.1",
     "preact": "^8.4.2",
     "preact-compat": "^3.18.4",
+    "react-dropzone": "^8.0.1",
     "unistore": "^3.1.0"
   },
   "devDependencies": {
