--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "linkstate": "^1.1.1",
     "preact": "^8.4.2",
     "preact-compat": "^3.18.4",
+    "react-beautiful-dnd": "^10.0.3",
+    "react-dragula": "^1.1.17",
     "react-dropzone": "^8.0.1",
     "unistore": "^3.1.0"
   },
@@ -23,6 +25,8 @@
     "babel-loader": "^8.0.4",
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   },
